UPDATE XP & Formation design

--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
                                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 col-lg-offset-3">
                                         <div class="row formation-content">
                                             <div class="row formation-name">
-                                                <p>Bachelor Développeur en Génie Logiciel Web & Mobilité (par alternance)</p>
+                                                <span>Bachelor Développeur en Génie Logiciel Web & Mobilité (par alternance)</span>
                                             </div>
                                             <div class="row formation-school">
-                                                <p>ECE TECH - Paris</p>
+                                                <span>ECE TECH - Paris</span>
                                             </div>
                                             <div class="row formation-date">
-                                                <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspSeptembre 2016 - (Prévu pour) Juin 2017</p>
+                                                <i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> <span>Septembre 2016 - (Prévu pour) Juin 2017</span>
                                             </div>
                                             <div class="row formation-subject">
                                                 <p></p>
@@ -113,13 +113,13 @@
                                         </div>
                                         <div class="row formation-content">
                                             <div class="row formation-name">
-                                                <p>Diplôme d'Ingénieur Généraliste</p>
+                                                <span>Diplôme d'Ingénieur Généraliste</span>
                                             </div>
                                             <div class="row formation-school">
-                                                <p>ECE - Paris</p>
+                                                <span>ECE - Paris</span>
                                             </div>
                                             <div class="row formation-date">
-                                                <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspSeptembre 2015 - Juin 2016 (réorientation)</p>
+                                                <i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> <span>Septembre 2015 - Juin 2016 (réorientation)</span>
                                             </div>
                                             <div class="row formation-subject">
                                                 <p></p>
@@ -127,16 +127,16 @@
                                         </div>
                                         <div class="row formation-content">
                                             <div class="row formation-name">
-                                                <p>DUT Génie Électrique et Informatique Industrielle</p>
+                                                <span>DUT Génie Électrique et Informatique Industrielle</span>
                                             </div>
                                             <div class="row formation-school">
-                                                <p>IUT d'Aix-Marseille Université</p>
+                                                <span>IUT d'Aix-Marseille Université</span>
                                             </div>
                                             <div class="row formation-date">
-                                                <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspSeptembre 2013 - Juin 2015</p>
+                                                <i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> <span>Septembre 2013 - Juin 2015</span>
                                             </div>
                                             <div class="row formation-spec">
-                                                <p>Spécialité: Électronique pour les Télécommunications</p>
+                                                <span>Spécialité: Électronique pour les Télécommunications</span>
                                             </div>
                                             <div class="row formation-subject">
                                                 <p></p>
@@ -144,17 +144,17 @@
                                         </div>
                                         <div class="row formation-content">
                                             <div class="row formation-name">
-                                                <p>Baccalauréat Scientifique</p>
+                                                <span>Baccalauréat Scientifique</span>
                                             </div>
                                             <div class="row formation-school">
-                                                <p>Lycée Général et Technologique Jules Ferry Cannes</p>
+                                                <span>Lycée Général et Technologique Jules Ferry Cannes</span>
                                             </div>
                                             <div class="row formation-date">
-                                                <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspSeptembre 2010 - Juin 2013</p>
+                                                <i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> <span>Septembre 2010 - Juin 2013</span>
                                             </div>
                                             <div class="row formation-spec">
-                                                <p>Option: Sciences de l'Ingénieur</p>
-                                                <p>Spécialité: Informatique et Sciences du Numérique</p>
+                                                <span>Option: Sciences de l'Ingénieur</span>
+                                                <span><br>Spécialité: Informatique et Sciences du Numérique</span>
                                             </div>
                                             <div class="row formation-subject">
                                                 <p></p>
@@ -171,13 +171,13 @@
                                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 col-lg-offset-3">
                                         <div class="row XP-content">
                                             <div class="row XP-job">
-                                                <p>Développeur Front End Junior (alternance)</p>
+                                                <span>Développeur Front End Junior (alternance)</span>
                                             </div>
                                             <div class="row XP-firm">
-                                                <p>Avanquest</p>
+                                                <span>Avanquest</span>
                                             </div>
                                             <div class="row XP-date">
-                                                <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspSeptembre 2016 - Septembre 2017</p>
+                                                <i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> <span>Septembre 2016 - Septembre 2017</span>
                                             </div>
                                             <div class="row XP-mission">
                                                 <p></p>
@@ -185,13 +185,13 @@
                                         </div>
                                         <div class="row XP-content">
                                             <div class="row XP-job">
-                                                <p>Développeur (stage)</p>
+                                                <span>Développeur (stage)</span>
                                             </div>
                                             <div class="row XP-firm">
-                                                <p>Visteon Software Technologies</p>
+                                                <span>Visteon Software Technologies</span>
                                             </div>
                                             <div class="row XP-date">
-                                                <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspAvril 2015 - Juin 2015</p>
+                                                <i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> <span>Avril 2015 - Juin 2015</span>
                                             </div>
                                             <div class="row XP-mission">
                                                 <p></p>
@@ -200,13 +200,13 @@
                                         <p class="subtitle"> Autres Expériences </p>
                                         <div class="row XP-content">
                                             <div class="row XP-job">
-                                                <p>Commis de salle</p>
+                                                <span>Commis de salle</span>
                                             </div>
                                             <div class="row XP-firm">
-                                                <p>Hotel Belles Rives *****</p>
+                                                <span>Hotel Belles Rives *****</span>
                                             </div>
                                             <div class="row XP-date">
-                                                <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspJuillet 2016 - Août 2016</p>
+                                                <i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> <span>Juillet 2016 - Août 2016</span>
                                             </div>
                                             <div class="row XP-mission">
                                                 <p></p>
@@ -214,13 +214,13 @@
                                         </div>
                                         <div class="row XP-content">
                                             <div class="row XP-job">
-                                                <p>Commis de bar</p>
+                                                <span>Commis de bar</span>
                                             </div>
                                             <div class="row XP-firm">
-                                                <p>Grand Hyatt Hôtel Martinez*****</p>
+                                                <span>Grand Hyatt Hôtel Martinez*****</span>
                                             </div>
                                             <div class="row XP-date">
-                                                <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspJuillet 2014 - Août 2014 &nbsp&nbsp & &nbsp&nbsp Juillet 2015 - Août 2015</p>
+                                                <i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> <span>Juillet 2014 - Août 2014 &nbsp&nbsp & &nbsp&nbsp Juillet 2015 - Août 2015</span>
                                             </div>
                                             <div class="row XP-mission">
                                                 <p></p>
@@ -228,13 +228,13 @@
                                         </div>
                                         <div class="row XP-content">
                                             <div class="row XP-job">
-                                                <p>Équipier Polyvalent</p>
+                                                <span>Équipier Polyvalent</span>
                                             </div>
                                             <div class="row XP-firm">
-                                                <p>McDonald's - Cannes La Bocca</p>
+                                                <span>McDonald's - Cannes La Bocca</span>
                                             </div>
                                             <div class="row XP-date">
-                                                <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspJuillet 2013 - Août 2013</p>
+                                                <i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> <span>Juillet 2013 - Août 2013</span>
                                             </div>
                                             <div class="row XP-mission">
                                                 <p></p>
