UPDATE Main & About Me display [smartphone]

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-        <!--<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">-->
+        <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<title>Lucas Randria - Mon CV</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
@@ -317,7 +317,7 @@
                                                         <i class="fa fa-star-half-o" aria-hidden="true"></i>
                                                         <i class="fa fa-star-o" aria-hidden="true"></i>
                                                     </li>
-                                                    <li>
+                                                    <li class="space">
                                                         <span><br></span>
                                                     </li>
                                                     <li>
@@ -334,7 +334,7 @@
                                                         <i class="fa fa-star-o" aria-hidden="true"></i>
                                                         <i class="fa fa-star-o" aria-hidden="true"></i>
                                                     </li>
-                                                    <li>
+                                                    <li class="space">
                                                         <span><br></span>
                                                     </li>
                                                     <li>
@@ -351,7 +351,7 @@
                                                         <i class="fa fa-star-o" aria-hidden="true"></i>
                                                         <i class="fa fa-star-o" aria-hidden="true"></i>
                                                     </li>
-                                                    <li>
+                                                    <li class="space">
                                                         <span><br></span>
                                                     </li>
                                                     <li>
@@ -393,7 +393,7 @@
                                                     <li>
                                                         <span class="skills-txt">Adobe InDesign (CC)</span>
                                                     </li>
-                                                    <li>
+                                                    <li class="space">
                                                         <span><br></span>
                                                     </li>
                                                     <li>
