UPDATE Skills display [smartphone]

--- a/index.html
+++ b/index.html
@@ -254,13 +254,13 @@
                                             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
                                                 <ul>
                                                     <li>
-                                                        <span class="skills-txt">HTML(5)</span>
+                                                        <span class="skills-txt">HTML<small>(5)</small></span>
                                                     </li>
                                                     <li>
-                                                        <span class="skills-txt">CSS(3)</span>
+                                                        <span class="skills-txt">CSS<small>(3)</small></span>
                                                     </li>
                                                     <li>
-                                                        <span class="skills-txt">Bootstrap(3)</span>
+                                                        <span class="skills-txt">Bootstrap<small>(3)</small></span>
                                                     </li>
                                                     <li>
                                                         <span><br></span>
@@ -284,7 +284,7 @@
                                                         <span><br></span>
                                                     </li>
                                                     <li>
-                                                        <span class="skills-txt">JAVA(POO)</span>
+                                                        <span class="skills-txt">JAVA<small>(POO)</small></span>
                                                     </li>
                                                     <li>
                                                         <span class="skills-txt">C</span>
@@ -379,32 +379,32 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 graphic-skills">
                                         <p class="subtitle"> Création Graphique </p>
                                         <div class="row">
-                                            <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7 graphic-skills">
+                                            <div class="col-lg-7 col-md-7 col-sm-7 col-xs-8">
                                                 <ul>
                                                     <li>
-                                                        <span class="skills-txt">Adobe Photoshop (CC)</span>
+                                                        <span class="skills-txt">Adobe Photoshop <small>(CC)</small></span>
                                                     </li>
                                                     <li>
-                                                        <span class="skills-txt">Adobe Illustrator (CC)</span>
+                                                        <span class="skills-txt">Adobe Illustrator <small>(CC)</small></span>
                                                     </li>
                                                     <li>
-                                                        <span class="skills-txt">Adobe InDesign (CC)</span>
+                                                        <span class="skills-txt">Adobe InDesign <small>(CC)</small></span>
                                                     </li>
                                                     <li class="space">
                                                         <span><br></span>
                                                     </li>
                                                     <li>
-                                                        <span class="skills-txt">Adobe Premiere Pro (CS6)</span>
+                                                        <span class="skills-txt">Adobe Premiere Pro <small>(CS6)</small></span>
                                                     </li>
                                                     <li>
-                                                        <span class="skills-txt">Adobe After Effect (CS6)</span>
+                                                        <span class="skills-txt">Adobe After Effect <small>(CS6)</small></span>
                                                     </li>
                                                 </ul>
                                             </div>
-                                            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 star-icon">
+                                            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-4 star-icon">
                                                 <ul>
                                                     <li>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -449,7 +449,7 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 col-lg-offset-4 o-skills">
+                                        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-10 col-lg-offset-4  col-xs-offset-1 o-skills">
                                             <p class="subtitle"> Autres Compétences </p>
                                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 o-skills-left-col">
                                                 <ul>
