UPDATE background changing color

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:500,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
+        <script type="text/javascript" src="js/jquery.scrollie.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
 	</head>
 
@@ -97,7 +98,7 @@
                         <div class="col-lg-8 col-md-10 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-1">
 
                             <!-- A PROPOS -->
-                            <div class="row framework about-me-large" id="about-me-large">
+                            <div class="row framework about-me-large inside" id="about-me-large">
                                 <p class="title"> Qui suis-je ? </p>
                                 <div class="sub">
                                     <div class="col-lg-2">
@@ -137,7 +138,7 @@
                             </div>
 
                             <!-- FORMATION -->
-                            <div class="row framework formation" id="formation">
+                            <div class="row framework formation inside" id="formation">
                                 <p class="title"> Formation </p>
                                 <div class="sub">
                                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 col-lg-offset-3">
@@ -209,7 +210,7 @@
                             </div>
 
                             <!-- EXPÉRIENCES PROFESSIONNELLES -->
-                            <div class="row framework XP" id="XP">
+                            <div class="row framework XP inside" id="XP">
                                 <p class="title"> Expériences Professionnelles </p>
                                 <div class="sub">
                                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 col-lg-offset-3">
@@ -229,7 +230,7 @@
                                         </div>
                                         <div class="row XP-content">
                                             <div class="row XP-job">
-                                                <span>Développeur (stage)</span>
+                                                <span>Développeur C/C++ (stage)</span>
                                             </div>
                                             <div class="row XP-firm">
                                                 <span>Visteon Software Technologies</span>
@@ -289,7 +290,7 @@
                             </div>
 
                             <!-- COMPÉTENCES -->
-                            <div class="row framework skills" id="skills">
+                            <div class="row framework skills inside" id="skills">
                                 <p class="title"> Compétences </p>
                                 <div class="sub">
                                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 skills-left-col">
@@ -550,6 +551,7 @@
                                     </div>
                                 </div>
                             </div>
+
 
                             <!-- HOBBIES -->
                             <div class="row framework hobbies" id="hobbies">
