UPDATE font family, menu icon

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                             </div>
 
                         </div>
-                        <div class="show-menu" style="display: none; position: fixed; z-index: 1000000000; margin-top: 15px; transform: translateX(82vw);">
-                            <a href="#menu-toggle" class="btn btn-default" id="menu-toggle" style="text-align: right; margin-right: 50px; margin-left: 25px; z-index: 1000000000; position: fixed;">Toggle Menu</a>
+                        <div class="show-menu">
+                            <img src="img/menu.png" alt="menu" class="menu" id="menu-toggle" href="#menu-toggle">
                         </div>
                      </div>
                 </div>
