--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
         <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet" >
         <link href="css/flag-icon/css/flag-icon.min.css" rel="stylesheet" >
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Just+Me+Again+Down+Here" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Kavivanar" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:500,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
@@ -24,77 +20,75 @@
 
 	<body>
 
-    <div id="wrapper" class="toggled">
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="#">
-                        Menu
-                    </a>
-                </li>
-                <li>
-                    <a href="#about-me-large">Qui suis-je ?</a>
-                </li>
-                <li>
-                    <a href="#formation">Formation</a>
-                </li>
-                <li>
-                    <a href="#XP">Expériences Professionnelles</a>
-                </li>
-                <li>
-                    <a href="#skills">Compétences</a>
-                </li>
-                <li>
-                    <a href="#hobbies">Hobbies</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
-        </div>
-        <!-- /#sidebar-wrapper -->
+        <div id="wrapper" class="toggled">
 
-
-
-        <div class="container">
-            <div class="row bg-color">
-                <div class="row bg-pattern">
-
-                    <!-- Page présentation -->
-                    <div class="row main">
-                        <div class="col-lg-8 col-md-10 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-1 main-col">
-                            <div class="row PI_hexa">
-                                <img src="img/PI_hexa_3.png" alt="ID Picture" class="PI_hexa_click">
-                            </div>
-                            <div class="row name">
-                                <p>Lucas &nbspRandria</p>
-                            </div>
-                            <div class="row job">
-                                <p>WEBDESIGNER&nbsp X &nbspFRONT END DEVELOPER</p>
-                            </div>
-                            <div class="row main-social-icon">
-                                <a href="https://fr.linkedin.com/in/lucas-randria-83b315115"><i class="fa fa-linkedin fa-2x"></i></a>
-                                <a href="https://github.com/lr152594/CV_Website"><i class="fa fa-viadeo fa-2x"></i></a>
-                                <a href="https://github.com/lr152594/CV_Website"><i class="fa fa-github fa-2x"></i></a>
-                                <a href="mailto:lucas.randria@hotmail.fr"><i class="fa fa-envelope-o fa-2x"></i></a>
-                            </div>
-                            <div class="row main-message">
-                                <h6>Cliquez sur la photo pour accéder au CV</h6>
-                            </div>
-
-                        </div>
-                        <div class="show-menu">
-                            <img src="img/menu.png" alt="menu" class="menu" id="menu-toggle" href="#menu-toggle">
-                        </div>
-                     </div>
-                </div>
+            <!-- Sidebar -->
+            <div id="sidebar-wrapper">
+                <ul class="sidebar-nav">
+                    <li class="sidebar-brand">
+                        <a href="#">
+                            Menu
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#about-me-large">Qui suis-je ?</a>
+                    </li>
+                    <li>
+                        <a href="#formation">Formation</a>
+                    </li>
+                    <li>
+                        <a href="#XP">Expériences Professionnelles</a>
+                    </li>
+                    <li>
+                        <a href="#skills">Compétences</a>
+                    </li>
+                    <li>
+                        <a href="#hobbies">Hobbies</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
             </div>
+            <!-- /#sidebar-wrapper -->
 
-            <div id="page-content-wrapper">
+            <div class="container">
+                <div class="row bg-color">
+                    <div class="row bg-pattern">
+
+                        <!-- Page présentation -->
+                        <div class="row main">
+                            <div class="col-lg-8 col-md-10 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-1 main-col">
+                                <div class="row PI_hexa">
+                                    <img src="img/PI_hexa_3.png" alt="ID Picture" class="PI_hexa_click">
+                                </div>
+                                <div class="row name">
+                                    <p>Lucas &nbspRandria</p>
+                                </div>
+                                <div class="row job">
+                                    <p>WEBDESIGNER&nbsp X &nbspFRONT END DEVELOPER</p>
+                                </div>
+                                <div class="row main-social-icon">
+                                    <a href="https://fr.linkedin.com/in/lucas-randria-83b315115"><i class="fa fa-linkedin fa-2x"></i></a>
+                                    <a href="https://www.viadeo.com/invitation/lucas.randria1"><i class="fa fa-viadeo fa-2x"></i></a>
+                                    <a href="https://github.com/lr152594/CV_Website"><i class="fa fa-github fa-2x"></i></a>
+                                    <a href="mailto:lucas.randria@hotmail.fr"><i class="fa fa-envelope-o fa-2x"></i></a>
+                                </div>
+                                <div class="row main-message">
+                                    <h6>Cliquez sur la photo pour accéder au CV</h6>
+                                </div>
+                            </div>
+                            <div class="show-menu">
+                                <img src="img/menu.png" alt="menu" class="menu" id="menu-toggle" href="#menu-toggle">
+                            </div>
+                         </div>
+                    </div>
+                </div>
+
+                <div id="page-content-wrapper">
+
                     <!-- Contenu -->
                     <div class="row content">
-
                         <div class="col-lg-8 col-md-10 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-1">
 
                             <!-- A PROPOS -->
@@ -552,7 +546,6 @@
                                 </div>
                             </div>
 
-
                             <!-- HOBBIES -->
                             <div class="row framework hobbies" id="hobbies">
                                 <p class="title"> Hobbies </p>
@@ -630,19 +623,6 @@
                                                 </li>
                                             </ul>
                                         </div>
-
-
-                                        <!-- OLD
-                                        <ul>
-                                            <li>
-                                                <i class="fa fa-home fa-2x" aria-hidden="true"></i> <span> 3, Avenue Ferdinand Buisson<br> &emsp;&emsp; 75016 - Paris </span>
-                                            </li>
-                                            <li>
-                                                <a href="tel:+33650989822"><i class="fa fa-mobile fa-3x" aria-hidden="true"></i><span class="contact-txt"> 06 50 98 98 22</span></a>
-                                            </li>
-                                        </ul> -->
-
-
                                     </div>
                                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 contact-right-col">
                                         <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 contact-icon-col">
@@ -671,34 +651,13 @@
                                                 </li>
                                             </ul>
                                         </div>
-
-
-
-                                        <!-- OLD
-                                        <ul>
-                                            <li>
-                                                <a href="mailto:lucas.randria@hotmail.fr"><i class="fa fa-envelope-o fa-2x"></i><span class="contact-txt"> lucas.randria@hotmail.fr</span></a>
-                                            </li>
-                                            <li>
-                                                <a href="https://fr.linkedin.com/in/lucas-randria-83b315115"><i class="fa fa-linkedin fa-2x"></i><span class="contact-txt"> linkedin.com/in/lucas-randria</span></a>
-                                            </li>
-                                            <li>
-                                                <a href="https://www.viadeo.com/invitation/lucas.randria1"><i class="fa fa-viadeo fa-2x"></i><span class="contact-txt"> viadeo.com/p/lucasrandria</span></a>
-                                            </li>
-                                        </ul>-->
-
-
                                     </div>
                                 </div>
                             </div>
-
                          </div>
-
                     </div>
-
+                </div>
+            </div>
         </div>
-        </div>
-    </div>
 	</body>
-
 </html>
